--- a/example16/index.html
+++ b/example16/index.html
@@ -115,7 +115,14 @@
 							<td></td>
 						</tr>
 					</table>
+					<div class="instructions">
+						Element dropped to the right container can be cloned with shift key.
+						Press shift key and start to drag expanded element.
+						On the other hand, cloned element will be deleted in case of dropping back to the left table.
+						Original and cloned elements have different hover color.
+					</div>
 				</div>
+
 			</div><!-- left container -->
 			
 			<!-- right container -->
@@ -132,7 +139,7 @@
 				</div>
 
 				<br/>
-				<input type="button" value="Table" onclick="javascript:toggle(this, 'page2')"/>
+				<input type="button" value="Table" onclick="redips.toggle(this, 'page2')"/>
 				<div id="page2" class="page other">
 					<table cellspacing="0" cellpadding="0">
 						<colgroup><col width="300"/></colgroup>
@@ -145,7 +152,7 @@
 				</div>
 
 				<br/>
-				<input type="button" value="Table" onclick="javascript:toggle(this, 'page3')"/>
+				<input type="button" value="Table" onclick="redips.toggle(this, 'page3')"/>
 				<div id="page3" class="page other">
 					<table cellspacing="0" cellpadding="0">
 						<colgroup><col width="300"/></colgroup>
@@ -158,7 +165,7 @@
 				</div>
 
 				<br/>
-				<input type="button" value="Table" onclick="javascript:toggle(this, 'page4')"/>
+				<input type="button" value="Table" onclick="redips.toggle(this, 'page4')"/>
 				<div id="page4" class="page other">
 					<table cellspacing="0" cellpadding="0">
 						<colgroup><col width="300"/></colgroup>
@@ -171,7 +178,7 @@
 				</div>
 
 				<br/>
-				<input type="button" value="Table" onclick="javascript:toggle(this, 'page5')"/>
+				<input type="button" value="Table" onclick="redips.toggle(this, 'page5')"/>
 				<div id="page5" class="page other">
 					<table cellspacing="0" cellpadding="0">
 						<colgroup><col width="300"/></colgroup>
@@ -184,7 +191,7 @@
 				</div>
 
 				<br/>
-				<input type="button" value="Table" onclick="javascript:toggle(this, 'page6')"/>
+				<input type="button" value="Table" onclick="redips.toggle(this, 'page6')"/>
 				<div id="page6" class="page other">
 					<table cellspacing="0" cellpadding="0">
 						<colgroup><col width="300"/></colgroup>
