--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 				<tr>
 					<td><div id="link1" class="drag t1">Example 06<br/><a href="example06/">Scrollable and fixed containers</a></div></td>
 					<td><div id="link1" class="drag t1">Example 14<br/><a href="example14/">Sort elements in long table</a></div></td>
-					<td></td>
+					<td><div id="link1" class="drag t1">Example 22<br/><a href="example22/">Drag and form details</a></div></td>
 				</tr>
 				<tr>
 					<td><div id="link1" class="drag t1">Example 07<br/><a href="example07/index1.html">A B C D</a> / <a href="example07/index2.html">E F</a></div></td>
