--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 	<body>
 		<center>
 			<h2><a href="http://www.redips.net/javascript/drag-and-drop-table-content/" title="www.redips.net">REDIPS_drag</a> / <a href="http://www.redips.net/javascript/redips-drag-documentation/" title="REDIPS.drag documentation">Documentation</a> / <a href="http://www.redips.net/javascript/redips-drag-documentation-appendix-a/" title="REDIPS.drag documentation - Appendix A">Appendix A</a></h2>
-			<h3>Drag and drop table content/rows with JavaScript - Version 4.6.14 (<a href="changes.txt">changes</a>)</h3>
+			<h3>Drag and drop table content/rows with JavaScript - Version 4.6.15 (<a href="changes.txt">changes</a>)</h3>
 		</center>
 		<!-- tables inside this DIV could have draggable content -->
 		<div id="drag">
@@ -90,6 +90,7 @@
 				<tr>
 					<td><div id="link1" class="drag t1">Example 07<br/><a href="example07/index1.html">A B C D</a> / <a href="example07/index2.html">E F</a></div></td>
 					<td><div id="link1" class="drag t1">Example 15<br/><a href="example15/">Drag and drop table rows</a></div></td>
+					<td><div id="link1" class="drag t1">Example 23<br/><a href="example23/">Shopping cart</a></div></td>
 					<td></td>
 				</tr>
 				<tr>
