--- a/example07/index1.html
+++ b/example07/index1.html
@@ -69,7 +69,7 @@
 					</table>
 				</div><!-- right container -->
 			</div><!-- drag container -->
-			<div id="message">Only A and B elements can be placed to the last row</div>
+			<div id="message">Only A and B elements can go to the last row</div>
 		</div><!-- main container -->
 	</body>
 </html>
