--- a/example07/index2.html
+++ b/example07/index2.html
@@ -82,7 +82,7 @@
 			<div id="message">
 				E - can be placed everywhere
 				<br/>
-				F - can be placed to the table bottom
+				F - can be placed to the last two rows
 			</div>
 		</div><!-- main container -->
 	</body>
