--- a/example18/index1.html
+++ b/example18/index1.html
@@ -17,7 +17,7 @@
 		<center>
 			<!-- buttons -->
 			<div id="buttons">
-				<input type="button" value="Move" class="button" id="btn_move" onclick="javascript:move()"/>
+				<input type="button" value="Move" class="button" id="btn_move" onclick="redips.move()"/>
 			</div>
 			<!-- drag region -->
 			<div id="drag">
