--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<script type="text/javascript" src="redips-drag-min.js"></script>
 		<!-- initialize drag and drop -->
 		<script type="text/javascript">
-			// after page is loaded, initialize DIV elements inside tables
+			// after page is loaded, initialize DIV elements inside table
 			window.onload = function () {
 				// reference to the REDIPS.drag library
 				var	rd = REDIPS.drag;
@@ -36,7 +36,7 @@
 	<body>
 		<center>
 			<h2><a href="http://www.redips.net/javascript/drag-and-drop-table-content/" title="www.redips.net">REDIPS_drag</a> / <a href="http://www.redips.net/javascript/redips-drag-documentation/" title="REDIPS.drag documentation">Documentation</a> / <a href="http://www.redips.net/javascript/redips-drag-documentation-appendix-a/" title="REDIPS.drag documentation - Appendix A">Appendix A</a></h2>
-			<h3>Drag and drop table content/rows with JavaScript - Version 4.6.16 (<a href="changes.txt">changes</a>)</h3>
+			<h3>Drag and drop table content/rows with JavaScript - Version 4.6.17 (<a href="changes.txt">changes</a>)</h3>
 		</center>
 		<!-- tables inside this DIV could have draggable content -->
 		<div id="drag">
