--- a/example13/index.html
+++ b/example13/index.html
@@ -197,7 +197,7 @@
 				</table>
 				<!-- message -->
 				<div class="message">
-					Elements can be cloned with SHIFT key (press SHIFT key and drag element)
+					Element can be cloned with SHIFT key (press SHIFT key and drag element)
 				</div>
 			</div>
 			<br/>
