--- a/example00/index2.html
+++ b/example00/index2.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, user-scalable=no"/><!-- "position: fixed" fix for Android 2.2+ -->
 		<link rel="stylesheet" href="style.css" type="text/css" media="screen" />
 		<script type="text/javascript" src="../header.js"></script>
-		<!-- REDIP.drag -->
+		<!-- REDIPS.drag -->
 		<script type="text/javascript" src="../redips-drag-min.js"></script>
 		<!-- load jQuery -->
 		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
@@ -17,7 +17,7 @@
 	<body>
 		<center>
 			<!-- input table -->
-			<input type="button" value="Load" class="button" onclick="load_table(this)" title="Load table"/>
+			<input type="button" value="Load" class="button" onclick="redips.load_table(this)" title="Load table"/>
 			<!-- tables inside this DIV could contain drag-able content  -->
 			<div id="drag">
 				<table>
