--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, user-scalable=no"/><!-- "position: fixed" fix for Android 2.2+ -->
 		<link rel="stylesheet" href="style.css" type="text/css" media="screen" />
 		<script type="text/javascript" src="redips-drag-min.js"></script>
-		<!-- initialize drag and drop -->
+		<!-- initialize REDIPS.drag library -->
 		<script type="text/javascript">
 			// after page is loaded, initialize DIV elements inside table
 			window.onload = function () {
