--- a/example09/index.html
+++ b/example09/index.html
@@ -58,7 +58,7 @@
 				Double click will return element to initial position
 				<br/><br/>
 				<!-- animation checkbox -->
-				<input type="checkbox" class="checkbox" onclick="toggle_animation(this)" title="Enable / disable animation" checked=""/><span>Animation</span>
+				<input type="checkbox" class="checkbox" onclick="toggleAnimation(this)" title="Enable / disable animation" checked=""/><span>Shift animation</span>
 			</div>
 		</div><!-- main container -->
 	</body>
