--- a/example18/index.html
+++ b/example18/index.html
@@ -18,8 +18,8 @@
 			<!-- buttons -->
 			<div id="buttons">
 					<input type="button" value="Move" class="button" id="btn_move" onclick="redips.move()"/><span></span> <!-- empty span element is needed for applying right margin in CSS -->
-					<input type="checkbox" class="checkbox" onclick="redips.toggle_clone(this)" title="Clone DIV element"/><span class="message_line">Clone</span>
-					<input type="checkbox" class="checkbox" onclick="redips.toggle_overwrite(this)" title="Overwrite content"/><span class="message_line">Overwrite</span>
+					<input type="checkbox" class="checkbox" onclick="redips.toggleClone(this)" title="Clone DIV element"/><span class="message_line">Clone</span>
+					<input type="checkbox" class="checkbox" onclick="redips.toggleOverwrite(this)" title="Overwrite content"/><span class="message_line">Overwrite</span>
 			</div>
 			<!-- drag region -->
 			<div id="drag">
