--- a/example21/index.html
+++ b/example21/index.html
@@ -46,8 +46,8 @@
 					<tr>
 						<td><div class="drag">M</div></td>
 						<td><div class="drag">N</div></td>
-						<td></td>
-						<td></td>
+						<td class="mark"></td>
+						<td class="mark"></td>
 						<td></td>
 						<td></td>
 					</tr>
