--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 				<tr>
 					<td><div id="link1" class="drag t1">Example 07<br/><a href="example07/index1.html">A B C D</a> / <a href="example07/index2.html">E F</a></div></td>
 					<td><div id="link1" class="drag t1">Example 16<br/><a href="example16/">AJAX, hover, sticky, dragging</a></div></td>
-					<td></td>
+					<td><div id="link1" class="drag t1">Example 25<br/><a href="example25/">Multiplication</a></div></td>
 				</tr>
 				<tr>
 					<td><div id="link1" class="drag t1">Example 08<br/><a href="example08/">Tables in separated containers</a></div></td>
