fixing overflow handling

--- a/example21/index.html
+++ b/example21/index.html
@@ -54,14 +54,20 @@
 					<tr>
 						<td><div class="drag">O</div></td>
 						<td><div class="drag">P</div></td>
+						<td rowspan="2"></td>
 						<td></td>
+						<td colspan="2"></td>
+					</tr>
+					<tr>
+						<td><div class="drag">Q</div></td>
+						<td><div class="drag">R</div></td>
 						<td></td>
 						<td></td>
 						<td></td>
 					</tr>
 					<tr>
-						<td><div class="drag">Q</div></td>
-						<td><div class="drag">R</div></td>
+						<td><div class="drag">S</div></td>
+						<td><div class="drag">T</div></td>
 						<td></td>
 						<td class="mark"></td>
 						<td></td>
@@ -119,10 +125,10 @@
 				<!-- overflow -->
 				<span class="text">Overflow:</span>
 				<br/>
-				<input type="radio" name ="shift_overflow" onclick="overflow(this)" title="Overflow - bunch" value="bunch" checked="true"/>bunch - overflowed DIV will stay in last cell (default)<br/>
+				<input type="radio" name ="shift_overflow" onclick="overflow(this)" title="Overflow - bunch" value="bunch"/>bunch - overflowed DIV will stay in last cell (default)<br/>
 				<input type="radio" name ="shift_overflow" onclick="overflow(this)" title="Overflow - delete" value="delete"/>delete - overflow will be deleted<br/>
 				<input type="radio" name ="shift_overflow" onclick="overflow(this)" title="Overflow - source" value="source"/>source - overflow will me moved to the source TD<br/>
-				<input type="radio" name ="shift_overflow" onclick="overflow(this)" title="Overflow - source" value="user"/>HTMLElement - overflow will me moved to user defined TD<br/>
+				<input type="radio" name ="shift_overflow" onclick="overflow(this)" title="Overflow - source" value="user" checked="true"/>HTMLElement - overflow will me moved to user defined TD<br/>
 			</div>
 		</div>
 	</body>
